[package]
name = "rasen-bridge"
version = "0.1.0"
authors = ["Léo-Paul COUTURIER <root@leops.me>"]

[lib]
name = "rasen"
crate-type = ["dylib"]

[dependencies]
serde = "0.8"
serde_json = "0.8"
error-chain = "*"

[dependencies.rasen]
version = "0.6.0"
git = "https://github.com/leops/rasen.git"
rev = "fbc1640"

[dependencies.spirv-utils]
version = "0.2.1"
git = "https://github.com/leops/spirv-utils.git"
rev = "b99f9b0"
